Fix js media queries and make header cells wrap

--- a/src/bom_edit/bom.scss
+++ b/src/bom_edit/bom.scss
@@ -54,6 +54,7 @@
 
     div.headerCell {
         display: flex;
+        flex-wrap: wrap;
     }
 
     div.headerCellInner {
